--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
+spring.h2.console.settings.web-allow-others=true
 
 trip.sort.columns=punchTime,time
